--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <p>10k+ companies</p>
       <p>314 templates</p>
       <p>12m+ queries</p>
+      <img src="/images/image-header-desktop.jpg" alt="Main component image" />
     </main>
     <footer>
       <div class="attribution">
