--- a/index.html
+++ b/index.html
@@ -34,9 +34,18 @@
           regarding revenue, customer experience, and overall efficiency.
         </p>
         <div class="details">
-          <p>10k+ companies</p>
-          <p>314 templates</p>
-          <p>12m+ queries</p>
+          <div class="first">
+            <p id="heading-stat">10k+</p>
+            <p id="stats">companies</p>
+          </div>
+          <div class="second">
+            <p id="heading-stat">314</p>
+            <p id="stats">templates</p>
+          </div>
+          <div class="third">
+            <p id="heading-stat">12M+</p>
+            <p id="stats">queries</p>
+          </div>
         </div>
       </div>
       <div class="image-view">
