--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   <body>
     <main>
       <div class="main-text">
-        <p class="main-head">Get insights that help your business grow.</p>
+        <p class="main-head">
+          Get <b>insights</b> that help your business grow.
+        </p>
         <p class="paragraph">
           Discover the benefits of data analytics and make better decisions
           regarding revenue, customer experience, and overall efficiency.
