--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   </head>
   <body>
     <main>
+      <div class="mobile-pic">
+        <img src="/images/image-header-mobile.jpg" alt="Main image" />
+      </div>
       <div class="main-text">
         <p class="main-head">
           Get <b>insights</b> that help your business grow.
