--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="wclassth=device-wclassth, initial-scale=1.0"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -40,16 +43,16 @@
         </p>
         <div class="details">
           <div class="first">
-            <p id="heading-stat">10k+</p>
-            <p id="stats">companies</p>
+            <p class="heading-stat">10k+</p>
+            <p class="stats">companies</p>
           </div>
           <div class="second">
-            <p id="heading-stat">314</p>
-            <p id="stats">templates</p>
+            <p class="heading-stat">314</p>
+            <p class="stats">templates</p>
           </div>
           <div class="third">
-            <p id="heading-stat">12M+</p>
-            <p id="stats">queries</p>
+            <p class="heading-stat">12M+</p>
+            <p class="stats">queries</p>
           </div>
         </div>
       </div>
